Refactor: Decouple Wiki Saving from Publishing Logic and Improve API Responses #18 permission remove create draft, permission add Publish wiki draft
